Рефакторинг DI-контейнера. Реализован методы добавления данных в БД.

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -9,6 +9,7 @@
     },
     "MVCStartApp": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
